# side-qt

./: .gitignore  CMakeLists.txt  CMakePresets.json
.cache/clangd/index/: main.cpp.2C76ED261D6362A7.idx
.github/workflows/: ci.yml
day0/: .gitattributes  .gitignore  CMakePresets.json
day0/.cache/clangd/index/: StringUtils.cpp.0BE81C1EA7D60148.idx  StringUtils.cpp.399AF6F97926070E.idx  StringUtils.h.B9A87D4BE79F661A.idx  StringUtils.hpp.6BAEEB4487751B09.idx  main.cpp.239550DA51740665.idx  mainwindow.cpp.1E9170DE962AAF76.idx  mainwindow.cpp.F6F819E9ACEF51F7.idx  mainwindow.h.42DFA1C992B2F238.idx  mainwindow.hpp.AAF7DB038C5BC953.idx
day0/.github/workflows/: ci.yml
day0/modules/: CMakeLists.txt
day0/modules/utils/: StringUtils.hpp
day0/resources/: resources.qrc
day0/src/: mainwindow.cpp  mainwindow.hpp
day0/ui/: mainwindow.ui
day1/: README.md
day1/src/: test  test.cpp
day2/: README.md
day2/src/: test  test.cpp
day3/: CMakeLists.txt
day3/.cache/clangd/index/: StringUtils.cpp.98D65EC60C3BC26E.idx  StringUtils.h.FE19CBF122982170.idx  mainwindow.cpp.DB8ED104B1F2B2C8.idx
day3/modules/counter/: counter.h
day3/src/: main.cpp
day4/: CMakeLists.txt  CMakePresets.json  ReadMe.md
day4/.cache/clangd/index/: StringUtils.cpp.1A33CC5455AA6862.idx  StringUtils.h.A91757D07B412A67.idx  counter.cpp.6F3FD15C6E54B950.idx  counter.cpp.8B7F99185DE6FCFC.idx  counter.h.36FD01C06C86E2E8.idx  counter.h.51E4E341D5C52C5D.idx  main.cpp.0233BCAF82706BD6.idx  main.cpp.E2A103EA6125018A.idx  mainwindow.cpp.59C614F11BBCFBDE.idx  mainwindow.h.0B23248DDB42294E.idx  mainwindow.h.B1541E1027ED686F.idx
day4/modules/counter/: counter.cpp
day4/modules/utils/: StringUtils.cpp
day4/src/: main.cpp  mainwindow.cpp
modules/utils/: StringUtils.cpp
src/: main.cpp
